--- a/index.html
+++ b/index.html
@@ -79,12 +79,36 @@
       </div>
     </section>
 
+
+
     <section class="features" id="features">
       <div
         data-aos="fade-down"
         data-aos-duration="1000"
         data-aos-once="true"
       >
+
+      <div class="container">
+        <div class="image">
+          <img src="image (2).png" alt="Описание изображения">
+        </div>
+        <div class="text">
+          <h1>Пример проигрования музыки</h1>
+          <p>Мы сделали красивую панель и добавили туда функционала<br>что бы вам было приятно пользоваться ею</p>
+        </div>
+
+      </div>
+
+      <div class="container">
+        <div class="text">
+          <h1>Качественный поиск вашей любимой музыки</h1>
+          <p>Наш поиск точно должен найти вашу любимую музыку,<br>но если такого не произошло то вы всегда можете вставить url</p>
+        </div>
+        <div class="image">
+          <img src="image.png" alt="Описание изображения">
+        </div>
+      </div>
+
       <div class="max-width">
         <h2 class="title"><i class="fas fa-tools"></i> Мои возможности</h2>
 
