--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 
       </div>
 
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        data-aos-once="true"
+      >
+
       <div class="container">
         <div class="text">
           <h1>Качественный поиск вашей любимой музыки</h1>
@@ -108,6 +114,28 @@
           <img src="image.png" alt="Описание изображения">
         </div>
       </div>
+
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        data-aos-once="true"
+      >
+
+      <div class="container">
+        <div class="image">
+          <img src="image1.png" alt="Описание изображения">
+        </div>
+        <div class="text">
+          <h1>История прослушивания треков</h1>
+          <p>Узнай что слушают твои друзья :)</p>
+        </div>
+      </div>
+
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        data-aos-once="true"
+      >
 
       <div class="max-width">
         <h2 class="title"><i class="fas fa-tools"></i> Мои возможности</h2>
@@ -146,6 +174,10 @@
                     <tr>
                         <td>!инфо</td>
                         <td>Покажет нужную информацию о боте</td>
+                    </tr>
+                    <tr>
+                      <td>!user</td>
+                      <td>Покажет историю прослушивания музыки, узнай что слушают люди :)</td>
                     </tr>
                     <tr>
                         <td>!хелп</td>
